# linear-regression

django-crud/: db.sqlite3  pyproject.toml
django-crud/snacks/: admin.py  models.py  tests.py  urls.py  views.py
django-crud/snacks/migrations/: 0001_initial.py
django-crud/snacks_crud_project/: settings.py  urls.py
django-crud/templates/: snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
drf-api/: pyproject.toml
drf-api/drf-api/: db.sqlite3
drf-api/drf-api/drf_api/: settings.py  urls.py
linear-regression/: regression.ipynb
test_docker/: pyproject.toml
text-classifier/: pyproject.toml  sentiment_analyzer.ipynb  sentiment_analyzer1.ipynb  test.py  test1.py  text_for_test.txt
web-scraper/: can.ipynb  pyproject.toml
web-scraper/tests/: test_web_scraper.py
web-scraper/web_scraper/: can.ipynb  web_scarper.py
