[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["ManarAbdelkarim <manarbdelkarim434@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
